--- a/mousecircle.html
+++ b/mousecircle.html
@@ -243,6 +243,8 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
 
                     canvas.width = w;
                     canvas.height = h;
+                    canvas.style.width = `${w}px`;
+                    canvas.style.height = `${h}px`;
 
                     const handle = nextHandle++;
                     windows.set(handle, { canvas, width: w, height: h });
@@ -953,14 +955,14 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                             dv.setUint32(event_ptr, 0x100, true); // SDL_EVENT_QUIT
                         } else if (event.type === 'keydown') {
                             dv.setUint32(event_ptr, 0x300, true); // SDL_EVENT_KEY_DOWN
-                            dv.setUint32(event_ptr + 16, event.key, true); // keycode at offset 16
+                            dv.setUint32(event_ptr + 4, event.key, true); // keycode
                         } else if (event.type === 'keyup') {
                             dv.setUint32(event_ptr, 0x301, true); // SDL_EVENT_KEY_UP
-                            dv.setUint32(event_ptr + 16, event.key, true); // keycode at offset 16
+                            dv.setUint32(event_ptr + 4, event.key, true); // keycode
                         } else if (event.type === 'mousemotion') {
                             dv.setUint32(event_ptr, 0x400, true); // SDL_EVENT_MOUSE_MOTION
-                            dv.setFloat32(event_ptr + 16, event.xrel, true); // xrel at offset 16
-                            dv.setFloat32(event_ptr + 20, event.yrel, true); // yrel at offset 20
+                            dv.setFloat32(event_ptr + 4, event.xrel, true); // xrel
+                            dv.setFloat32(event_ptr + 8, event.yrel, true); // yrel
                         }
                     }
 
