--- a/mousecircle.html
+++ b/mousecircle.html
@@ -168,8 +168,8 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                     'KeyS': 0x73,       // SDLK_S ('s')
                     'KeyD': 0x64,       // SDLK_D ('d')
                     'Space': 0x20,      // SDLK_SPACE
-                    'ShiftLeft': 0xE1,  // SDLK_LSHIFT
-                    'ControlLeft': 0xE0,// SDLK_LCTRL
+                    'ShiftLeft': 1073742049,  // SDLK_LSHIFT
+                    'ControlLeft': 1073742048,// SDLK_LCTRL
                     'Escape': 0x1B,     // SDLK_ESCAPE
                     'KeyQ': 0x71,       // SDLK_Q ('q')
                 };
