--- a/mousecircle.html
+++ b/mousecircle.html
@@ -835,8 +835,9 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                 },
 
                 begin_gpu_copy_pass(cmdbufHandle) {
-                    console.log('[SDL] BeginGPUCopyPass, cmdbuf:', cmdbufHandle);
                     const cmdbuf = commandBuffers.get(cmdbufHandle);
+                    console.log('[SDL] BeginGPUCopyPass, cmdbuf:', cmdbufHandle, 'exists:', !!cmdbuf);
+                    console.trace('[SDL] BeginGPUCopyPass call stack');
                     if (!cmdbuf) {
                         console.error('[SDL] BeginGPUCopyPass: invalid cmdbuf', cmdbufHandle);
                         return 0;
@@ -863,22 +864,24 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                     const destOffset = dv.getUint32(dest_ptr + 4, true);
                     const size = dv.getUint32(dest_ptr + 8, true);
 
-                    console.log('[SDL] UploadToGPUBuffer, transferBuf:', transferBufferHandle, 'destBuf:', destBufferHandle, 'size:', size);
+                    const destBuffer = buffers.get(destBufferHandle);
+                    const bufferSize = destBuffer ? destBuffer.size : 0;
+                    console.log('[SDL] UploadToGPUBuffer, transferBuf:', transferBufferHandle, 'destBuf:', destBufferHandle, 'destSize:', bufferSize, 'uploadSize:', size);
 
                     const transferBuf = transferBuffers.get(transferBufferHandle);
-                    const destBuffer = buffers.get(destBufferHandle);
 
                     if (transferBuf && destBuffer && transferBuf.mappedData) {
                         const srcArray = transferBuf.mappedData;
-                        if (size >= 24 && sourceOffset % 4 === 0) {
-                            const floatCount = Math.min(12, size / 4);
-                            const previewFloats = new Float32Array(srcArray.buffer, srcArray.byteOffset + sourceOffset, floatCount);
-                            console.log('[SDL] Upload preview floats:', Array.from(previewFloats));
-                        }
 
                         // Write mapped data directly to GPU buffer
                         device.queue.writeBuffer(destBuffer, destOffset, srcArray, sourceOffset, size);
-                        console.log('[SDL] UploadToGPUBuffer SUCCESS');
+                        console.log('[SDL] UploadToGPUBuffer SUCCESS - uploaded', size, 'bytes to buffer of size', bufferSize);
+
+                        // Track which buffers have been uploaded
+                        if (!destBuffer.uploadedSize) {
+                            destBuffer.uploadedSize = 0;
+                        }
+                        destBuffer.uploadedSize = Math.max(destBuffer.uploadedSize, destOffset + size);
                     } else {
                         console.error('[SDL] UploadToGPUBuffer FAILED:', {
                             transferBuf: !!transferBuf,
@@ -907,7 +910,8 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                         const buffer = buffers.get(bufferHandle);
                         if (buffer) {
                             passEntry.pass.setVertexBuffer(first_slot + i, buffer, offset);
-                            console.log('[SDL] BindGPUVertexBuffer, slot:', first_slot + i, 'handle:', bufferHandle, 'buffer:', buffer);
+                            const bufferSize = buffer.size;
+                            console.log('[SDL] BindGPUVertexBuffer, slot:', first_slot + i, 'handle:', bufferHandle, 'size:', bufferSize);
                         } else {
                             console.error('[SDL] BindGPUVertexBuffer: buffer not found, handle:', bufferHandle);
                         }
@@ -1000,7 +1004,7 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                 },
 
                 draw_gpu_primitives(passHandle, vertexCount, instanceCount, firstVertex, firstInstance) {
-                    console.log('[SDL] DrawGPUPrimitives, pass:', passHandle, 'verts:', vertexCount);
+                    console.log('[SDL] DrawGPUPrimitives, pass:', passHandle, 'verts:', vertexCount, 'instances:', instanceCount);
                     const passEntry = renderPasses.get(passHandle);
                     if (!passEntry) {
                         console.error('[SDL] DrawGPUPrimitives: invalid pass handle', passHandle);
